--- a/src/components/DatePicker/DatePicker.css
+++ b/src/components/DatePicker/DatePicker.css
@@ -1,62 +1,96 @@
 /* custom-datepicker.css */
 
 .react-datepicker {
-    border: none;
-  }
-  
-  .react-datepicker__header {
-    background-color: white;
-    border-bottom: none;
-  }
-  
-  .react-datepicker__current-month {
-    font-size: 1rem;
-    margin-bottom: 30px;
-    font-weight: 500;
-    color: #9c9c9c;
-  }
-  
-  .react-datepicker__day-names,
-  .react-datepicker__week {
-    font-weight: 100;
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .react-datepicker__day-name,
-  .react-datepicker__day {
-    width: 2rem;
-    line-height: 2rem;
-    text-align: center;
-    margin: 0.2rem;
-    color: #9c9c9c;
+  border: none;
+  width: 226px;
+  height: 227px;
+  margin-left: 10px;
+}
 
-  }
-  
-  .react-datepicker__day {
-    border-radius: 50%;
-    transition: background-color 0.2s ease, color 0.2s ease;
-  }
-  
-  .react-datepicker__day:hover {
-    background-color: #f0f0f0;
-  }
-  
-  .react-datepicker__day--selected {
-    background-color: #007bff;
-    color: white;
-  }
-  
-  .react-datepicker__day--disabled {
-    color: #ccc;
-  }
-  
-  .react-datepicker__navigation {
-    top: 1.5rem;
-  }
-  
-  .react-datepicker__navigation-icon::before {
-    border-color: #333;
+.react-datepicker__header {
+  background-color: white;
+  border-bottom: none;
+}
 
-  }
-  
+.react-datepicker__current-month {
+  font-size: 14px;
+  margin-bottom: 30px;
+  font-weight: 500;
+  color: #9c9c9c;
+}
+
+.react-datepicker__day-names,
+.react-datepicker__week {
+  font-weight: 300;
+  display: flex;
+  justify-content: space-between;
+  gap: 5px;
+}
+
+.react-datepicker__day-name,
+.react-datepicker__day {
+  width: 1.4rem;
+  line-height: 1.4rem;
+  text-align: center;
+  margin: 0.1rem;
+  color: #9c9c9c;
+}
+
+.react-datepicker__day {
+  border-radius: 50%;
+  transition: background-color 0.2s ease, color 0.2s ease;
+}
+
+.react-datepicker__day:hover {
+  background-color: #f0f0f0;
+}
+
+.react-datepicker__day--selected {
+  background-color: #007bff;
+  color: white;
+}
+
+.react-datepicker__day--disabled {
+  color: #ccc;
+}
+
+.react-datepicker__navigation {
+  top: 1.5rem;
+}
+
+.react-datepicker__navigation-icon::before {
+  border-color: #333;
+}
+
+.date-picker {
+  position: absolute;
+  top: 45px;
+  left: 1384px;
+  width: 282px;
+  height: 553px;
+  /* UI Properties */
+  background: #ffffff 0% 0% no-repeat padding-box;
+  box-shadow: 0px 0px 6px #00000029;
+  border-radius: 5px;
+  opacity: 1;
+  z-index: 10;
+}
+
+.heading {
+  font-size: 14px;
+  color: #6A6A6A;
+}
+
+.extra-values {
+  width: 241px;
+  height: 111px;
+  margin-left: 6px;
+  color: #6A6A6A;
+  font-weight: 400;
+  font-size: 14px;
+}
+
+.icons {
+  cursor: pointer;
+  color: #6a6a6a;
+}
